OM-51269 rb:35256: Made JVM parameters more easily configurable